# lesson_planner

./: .env.example  .gitignore  AGENT_CONTEXT.md  LICENSE  README.md  SETUP_INSTRUCTIONS.md  generate_test_data.py  main.py  print_schedule.py  pyproject.toml  scratch_test.py
src/constraints/: base.py  constraints.py  registry.py
src/db/: connection.py
src/db/models/: lesson_requirements.py  teacher.py  teacher_subject.py
src/ga/: chromosome.py  engine.py  population.py  repairs.py
src/lesson_planner/: __init__.py  config.py  database.py  logging_setup.py  models.py
src/lesson_planner/cli/: __init__.py  db.py  imports.py  main.py  scheduler.py  visualization.py
src/lesson_planner/constraints/: base.py  constraints.py  registry.py
src/lesson_planner/data_imports/: __init__.py  base.py  classes.py  grade_levels.py  grade_subject_requirements.py  lesson_slots.py  rooms.py  subjects.py  teacher_availability.py  teacher_subjects.py  teachers.py
src/lesson_planner/ga/: chromosome.py  engine.py  population.py  repairs.py
src/lesson_planner/imports/: __init__.py  base.py  classes.py  grade_levels.py  grade_subject_requirements.py  lesson_slots.py  rooms.py  subjects.py  teacher_availability.py  teacher_subjects.py  teachers.py
src/lesson_planner/models/: __init__.py  academic.py  base.py  facilities.py  infrastructure.py  scheduling.py  staff.py
src/lesson_planner/scheduler/: __init__.py  chromosome.py  ga_engine.py  persistence.py  population.py  repairs.py  scheduler_models.py
src/models/: grade.py  lesson_requirements.py  room.py  subject.py
(+13 files in other folders)
