[project]
name = "lesson-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "iwonieevo", email = "iwo.chwiszczuk@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.4",
]

[project.scripts]
lesson-planner = "lesson_planner.cli.main:app"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.15",
]
